[package]
name = "enet-client"
version = "0.2.0"
edition = "2018"
description = "eNet gateway client"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/enet-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.3", features = ["futures", "tokio"] }
bytes = "1"
eventuals = "0.6"
futures = "0.3"
paste = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"

enet-proto = { path = "../proto", version = "^0.1.6-alpha.0" }
