[package]
name = "enet-proto"
version = "0.1.1"
edition = "2018"
description = "eNet gateway protocol types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/enet-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
color-eyre = "0.5"
derive_more = "0.99"
enum-kinds = "0.5"
lazy_static = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "2"
serde_json = "1"
smol_str = "0.1"
thiserror = "1"
tracing = "0.1"
