[package]
name = "enet-proto"
version = "0.1.7"
edition = "2021"
description = "eNet gateway protocol types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/enet-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
color-eyre = "0.6"
derive_more = "0.99"
enum-kinds = "0.5"
lazy_static = "1"
regex = { version = "1.10.4", default-features = false, features = ["std", "perf"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
smol_str = "0.1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
serde_test = "1"
